welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers(){fleur(Color.RED);avance(4);fleur(Color.CYAN);recule();droite()avance(2);gauche();recule();fleur(Color.YELLOW);
	
}
def fleur(v: Color){
	marque(v);avance();marque(Color.YELLOW);avance();marque(v);recule();droite();avance();marque(v);recule(2);marque(v);avance();gauche();recule()
}
def marque(c: Color){setCouleurBrosse(c);baisseBrosse();leveBrosse()}
